turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:3: error: ';' expected but ',' found.
  val angle=51,428571428
              ^